--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:description" content="Portfolio of codemasteranil (Anil Kumar Kushwaha) - web developer, coder, and project showcase.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="/images/portfolio-og-image.png">
+    <meta name="google-site-verification" content="QNf0UYbgKbUgKLhkzGhAzrryEzmwpHFJXnWHotX7kXk" />
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -101,4 +102,5 @@
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
